# dummy_celery

./: Dockerfile  Makefile  manage.py  pyproject.toml  requirements.txt
compute/: models.py  tasks.py  urls.py  views.py
compute/migrations/: 0001_initial.py  0002_task_date_added.py
odin/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
