[tool.poetry]
name = "odin"
version = "0.1.0"
description = ""
authors = ["hikinit <hikinit@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.5"
celery = "^5.0.5"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
